# dvc

./: .codeclimate.yml  .gitignore  .pre-commit-config.yaml  .pyup.yml  README.rst  dvc.yaml  mypy.ini  pyproject.toml  setup.cfg  test_requirements.txt
.dvc/: config
.github/ISSUE_TEMPLATE/: config.yml  need_help.md
.github/workflows/: check-patch.yaml  packages.yaml  tests.yaml
dvc/: _io.py  cli.py  compare.py  data_cloud.py  dvcfile.py  exceptions.py  external_repo.py  hash_info.py  models.py  output.py  path_info.py  schema.py  serialize.py  state.py  types.py
dvc/cache/: base.py  local.py
dvc/command/: check_ignore.py  experiments.py  external.py  git_hook.py
dvc/command/experiments/: show.py
dvc/commands/: dag.py  dataset.py  diff.py
dvc/commands/experiments/: __init__.py  show.py
dvc/data/: reference.py  transfer.py
dvc/data/db/: reference.py
dvc/dependency/: base.py
dvc/fs/: _callback.py  azure.py  base.py  fsspec_wrapper.py  gdrive.py  utils.py  webdav.py
dvc/objects/: __init__.py  hash.py
dvc/output/: base.py  gs.py
dvc/parsing/: __init__.py  context.py  interpolate.py  parser.py
dvc/remote/: base.py  local.py  slow_link_detection.py
dvc/repo/: __init__.py  add.py  collect.py  data.py  datasets.py  get.py  get_url.py  index.py  ls.py  run.py  stage.py  walker.py  worktree.py
dvc/repo/experiments/: init.py  save.py
dvc/repo/experiments/executor/: base.py
dvc/repo/experiments/queue/: workspace.py
dvc/repo/plots/: template.py
dvc/stage/: __init__.py  cache.py  decorators.py  exceptions.py  imports.py  loader.py  run.py  serialize.py  utils.py
dvc/testing/benchmarks/: plugin.py
dvc/tree/: base.py  dvc.py  repo.py
dvc/ui/: _rich_progress.py
dvc/utils/: __init__.py  executors.py  fs.py  stage.py  threadpool.py  yaml.py
dvc/utils/serialize/: __init__.py
requirements/: azure.txt  default.txt  hdfs.txt  tests.txt
scripts/: build-requirements.txt
tests/: conftest.py
tests/func/: test_cli.py  test_daemon.py  test_dataset.py  test_repro.py  test_repro_multistage.py  test_run_multistage.py  test_run_single_stage.py  test_stage_resolver.py  test_stage_resolver_error_msg.py
tests/func/experiments/: test_init.py  test_show.py
tests/func/utils/: test_strict_yaml.py
tests/unit/: test_context.py  test_interpolate.py  test_lockfile.py  test_stage.py  test_stage_resolver.py  test_tabular_data.py
tests/unit/command/: test_dag.py  test_diff.py  test_experiments.py  test_external.py
tests/unit/stage/: test_loader_pipeline_file.py
tests/unit/utils/: test_executors.py
