[build-system]
requires = ["setuptools>=42", "wheel", "setuptools_scm[toml]>=3.4", "fastentrypoints"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
write_to="dvc/version.py"
write_to_template="__version__ = '{version}'"

[tool.black]
line-length = 79
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''
