[metadata]
name = dvc
description = Git for data scientists - manage your code and data together
long_description = file: README.rst
long_description_content_type = text/x-rst
url = http://dvc.org
author = Dmitry Petrov
author_email = dmitry@dvc.org
license = Apache License 2.0
license_file = LICENSE
classifiers =
    Development Status :: 4 - Beta
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
keywords =
    data-science
    data-version-control
    machine-learning
    git
    developer-tools
    reproducibility
    collaboration
    ai
download_url = https://github.com/iterative/dvc

[bdist_wheel]
universal=1

[options]
zip_safe = no
python_requires = >=3.6
include_package_data = true
packages = find:
setup_requires =
    setuptools_scm[toml]>=3.4.1
    setuptools>=42
install_requires =
    colorama>=0.3.9
    configobj>=5.0.6
    gitpython>3
    setuptools>=34.0.0
    nanotime>=0.5.2
    pyasn1>=0.4.1
    voluptuous>=0.11.7
    jsonpath-ng>=1.5.1
    requests>=2.22.0
    grandalf==0.7
    distro>=1.3.0
    appdirs>=1.4.3
    ruamel.yaml>=0.16.1
    toml>=0.10.1
    funcy>=1.14
    pathspec>=0.6.0
    shortuuid>=0.5.0
    tqdm>=4.45.0,<5
    packaging>=19.0
    zc.lockfile>=1.2.1
    flufl.lock==5.0.1
    win-unicode-console>=0.5; sys_platform == 'win32'
    pywin32>=225; sys_platform == 'win32'
    networkx==2.5
    pydot>=1.2.4
    speedcopy>=2.0.1; python_version < '3.8' and sys_platform == 'win32'
    dataclasses==0.7; python_version < '3.7'
    flatten_json==0.1.8
    tabulate>=0.8.7
    pygtrie==2.3.3
    dpath>=2.0.1,<3
    shtab>=1.3.0,<2
    rich>=3.0.5
    dictdiffer>=0.8.1

[options.extras_require]
gs =
    google-cloud-storage==1.31.0
gdrive =
    pydrive2>=1.4.14
s3 =
    boto3>1.9.201
azure =
    azure-storage-blob>12.0
    knack==0.7.2
oss =
    oss2==2.12.1
ssh =
    paramiko>=2.5.0
hdfs =
    pyarrow>=0.17.0
webdav =
    webdavclient3>=3.14.5
ssh_gssapi =
    paramiko[gssapi]>=2.5.0
all = %(gs)s %(gdrive)s %(s3)s %(azure)s %(oss)s %(ssh)s %(hdfs)s %(webdav)s
tests =
    pytest>=6.0.1
    pytest-docker>=0.7.2
    pytest-timeout>=1.3.3
    pytest-cov>=2.6.1
    pytest-xdist>=1.26.1
    pytest-mock==3.3.1
    pytest-lazy-fixture==0.6.3
    flaky>=3.5.3
    mock>=3.0.0
    xmltodict>=0.11.0
    awscli>=1.16.297
    google-compute-engine==2.8.13
    Pygments==2.6.1
    collective.checkdocs==0.2
    psutil==5.7.2
    moto==1.3.15.dev1044
    rangehttpserver==1.2.0
    beautifulsoup4==4.9.1
    wget==3.2
    filelock==3.0.12
    mock-ssh-server>=0.8.2
    jaraco.windows==5.0.0
qa =
    black==20.8b1
    flake8==3.8.3
    flake8-docstrings==1.5.0
    moto==1.3.14
    flake8-bugbear==20.1.4
    flake8-comprehensions==3.2.3
    flake8-string-format==0.3.0
    pylint==2.6.0
    pylint-pytest==0.3.0
    pylint-plugin-utils
    pydocstyle<4.0
dev = %(all)s %(tests)s %(qa)s

[options.entry_points]
console_scripts =
    dvc=dvc.main:main

[flake8]
ignore=
    E203, # Whitespace before ':'
    E266, # Too many leading '#' for block comment
    W503, # Line break occurred before a binary operator
    P1,  # unindexed parameters in the str.format, see:
    # https://pypi.org/project/flake8-string-format/
max_line_length=79
max-complexity = 15
select=B,C,E,F,W,T4,B902,T,P
show_source=true
count=true

[isort]
profile=black==20.8b1
known_first_party=dvc,tests
line_length=79
